[package]
name = "shop22"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shop22"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.29.0"}
libreplex_shared = {version = "*", path="../../../../libreplex/libreplex_program_library/programs/libreplex_shared", features = ["no-entrypoint"]}
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"]}
solana-program = "~1.17"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "~1.17"
solana-sdk = "~1.17"

